Use `stale` as label as the label is added before closing an issue

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -69,7 +69,7 @@ exemptMilestones: true
 #exemptAssignees: false
 
 # Label to use when marking as stale
-staleLabel: closed:stale
+staleLabel: stale
 
 
 # Comment to post when removing the stale label.
