Remove duplicate test
The removed test is already covered in the Exemplar tests

--- a/subprojects/docs/src/snippets/compositeBuilds/basic/tests/basicCli.sample.conf
+++ b/subprojects/docs/src/snippets/compositeBuilds/basic/tests/basicCli.sample.conf
@@ -2,6 +2,6 @@ execution-subdirectory: my-app
 executable: gradle
 args: run
 flags: "--include-build=../my-utils"
-expected-output-file: compositeBuilds_basic_cli.out
+expected-output-file: basicCli.out
 allow-additional-output: true
 allow-disordered-output: true
