--- a/subprojects/docs/src/snippets/compositeBuilds/plugin-dev/tests/compositeBuilds_plugin_dev.sample.conf
+++ b/subprojects/docs/src/snippets/compositeBuilds/plugin-dev/tests/compositeBuilds_plugin_dev.sample.conf
@@ -2,3 +2,4 @@ execution-subdirectory: consumer
 executable: gradle
 args: greeting
 flags: "--include-build=../greeting-plugin"
+expected-output-file: compositeBuilds_plugin_dev.out
