--- a/gradle/dependency-management/agp-versions.properties
+++ b/gradle/dependency-management/agp-versions.properties
@@ -1,3 +1,3 @@
 # Generated - Update by running `./gradlew updateAgpVersions`
-latests=3.4.2,3.5.3,3.6.3,4.0.0-beta05,4.1.0-alpha08
-nightly=4.1.0-20200426025141+0200
+latests=3.4.2,3.5.3,3.6.3,4.0.0-rc01,4.1.0-alpha09
+nightly=4.1.0-20200513131802+0200
