--- a/subprojects/docs/src/samples/build-organization/compositeBuilds/plugin-dev/tests/sanityCheck.sample.conf
+++ b/subprojects/docs/src/samples/build-organization/compositeBuilds/plugin-dev/tests/sanityCheck.sample.conf
@@ -1,8 +1,7 @@
 commands: [{
-    execution-subdirectory: consumer
     executable: gradle
     args: help -q
-    flags: "--include-build=../greeting-plugin"
+    flags: "--include-build=greeting-plugin"
 },{
     execution-subdirectory: greeting-plugin
     executable: gradle
