--- a/subprojects/docs/src/samples/build-organization/compositeBuilds/plugin-dev/tests/compositeBuilds_plugin_dev.sample.conf
+++ b/subprojects/docs/src/samples/build-organization/compositeBuilds/plugin-dev/tests/compositeBuilds_plugin_dev.sample.conf
@@ -1,5 +1,4 @@
-execution-subdirectory: consumer
 executable: gradle
 args: greeting
-flags: "--include-build=../greeting-plugin"
+flags: "--include-build=greeting-plugin"
 expected-output-file: compositeBuilds_plugin_dev.out
