--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -487,6 +487,7 @@ samples {
 // so it uses the Gradle distribution from the running build. This is not correct, because
 // we want to verify that the samples work with the Gradle distribution being built.
 tasks.named('docsTest').configure() { task ->
+    enabled = false
     task.dependsOn(tasks.named('intTestImage'))
     // TODO we usen absolute path here which makes the task not cacheable
     task.systemProperty("integTest.gradleHomeDir", new File(project.buildDir, "integ test").absolutePath)
@@ -511,7 +512,7 @@ tasks.named("docsTest") {
     // Do not execute Java Module tests on JVM < 9
     if (!buildJvms.testJvm.get().javaVersion.java9Compatible) {
         filter {
-            excludeTestsMatching "org.gradle.samples.ExemplarExternalSamplesFunctionalTest.java-modules-*.sample"
+            excludeTestsMatching "org.gradle.samples.ExemplarExternalSamplesFunctionalTest.*"
         }
     }
 }
